@@ -13,6 +13,7 @@ next (1.0):
 	- execute() in actions without HttpServletResponse
 	- Action renamed to WebAction
 	- optional ActionBase introduced
+	- WebAction.getModels() throws ContentProcessingException
 
 0.12.2:
 	- bugfix: fixed null pointer exception, when routing didn't match.
